# performance-testing-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-start.sh  requirements.txt  serverless.yml
.github/workflows/: main.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/data/: input.json
backend/results/: summary_20251204T192040.json
backend/src/: app.py  config.py  lambda_handler.py
backend/src/engine/: core.py  metrics.py  runner.py  upload.py
data/: input.json
deploy/: deploy.sh  nginx.conf
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/results/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/test/: page.tsx
frontend/components/: dashboard-nav.tsx  dashboard-overview.tsx  protected-route.tsx  settings-page.tsx  test-configuration.tsx  test-results.tsx
frontend/lib/: auth-context.tsx
loadforge/: .dockerignore  .gitignore  Dockerfile  auth-schema.ts  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
loadforge/drizzle/: 0000_ambitious_wendell_rand.sql  0000_mighty_red_skull.sql  0001_normal_inhumans.sql  0001_sturdy_william_stryker.sql  0002_plain_nekra.sql  0003_steady_wrecker.sql
loadforge/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
loadforge/src/: env.js  middleware.ts
loadforge/src/app/: layout.tsx  page.tsx
src/: config.py  email_sender.py  lambda_handler.py  url_loader.py
(+50 files in other folders)
