[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
boto3 = ">=1.42.21,<2.0.0"
flask = ">=3.1.2,<4.0.0"
requests = ">=2.32.5,<3.0.0"
flask-socketio = ">=5.6.0,<6.0.0"
eventlet = ">=0.40.4,<0.41.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
